--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -109,6 +109,15 @@
             </div>
 
             <div class="status-section">
+                <h4>Intermediate π Values</h4>
+                <div class="intermediate-values-container" id="intermediateValues">
+                    <div class="stat-description" style="text-align: center; color: #64748b; padding: 10px;">
+                        Values will appear during simulation
+                    </div>
+                </div>
+            </div>
+
+            <div class="status-section">
                 <h4>Configuration</h4>
                 <div class="stat-card">
                     <div class="stat-value" id="processCount">4</div>
@@ -118,7 +127,7 @@
 
                 <div class="stat-card">
                     <div class="stat-value" id="piValue">3.14159</div>
-                    <div class="stat-label">Current π Value</div>
+                    <div class="stat-label">Final π Value</div>
                     <div class="stat-description">Calculated value</div>
                 </div>
 
